Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-period">Q1 2023</div>
+              <div class="timeline-period">2023</div>
               <div class="timeline-title"><i class="fas fa-rocket"></i> Foundation</div>
               <p class="timeline-description">LinguaSign founded by Abdullah Shafiq, Qanita Adnan, and team. First prototype developed with cutting-edge sign language recognition.</p>
               <span class="timeline-milestone">Founding</span>
@@ -165,7 +165,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-period">Q2 2023</div>
+              <div class="timeline-period">2023</div>
               <div class="timeline-title"><i class="fas fa-money-bill"></i> Seed Funding</div>
               <p class="timeline-description">Secured significant seed funding to accelerate development. Launched beta program reaching 1,000 early adopters worldwide.</p>
               <span class="timeline-milestone">Investment</span>
@@ -176,7 +176,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-period">Q4 2023</div>
+              <div class="timeline-period">2023</div>
               <div class="timeline-title"><i class="fas fa-star"></i> Public Launch</div>
               <p class="timeline-description">Official public launch. Reached 10,000+ users within the first month. Added support for 20+ sign languages globally.</p>
               <span class="timeline-milestone">Launch</span>
@@ -274,7 +274,7 @@
           <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
@@ -284,3 +284,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
