Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
         </div>
         <div class="footer-col">
           <h4>Resources</h4>
-          <a href="#">Documentation</a>
+          <a href="api.html">Documentation</a>
           <a href="#">Community</a>
           <a href="#">Status</a>
           <a href="#">Help Center</a>
@@ -284,4 +284,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
