--- a/contact.html
+++ b/contact.html
@@ -281,7 +281,7 @@
       </div>
       <div class="footer-col">
         <h4>Resources</h4>
-        <a href="#">Documentation</a>
+        <a href="api.html">Documentation</a>
         <a href="#">Community</a>
         <a href="#">Status</a>
         <a href="#">Help Center</a>
@@ -295,7 +295,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 Linguasign. All rights reserved. | <a href="feedback.html" style="color: var(--muted); text-decoration: none;">Send Feedback</a></p>
+      <p>&copy; 2025 Linguasign. All rights reserved. | <a href="feedback.html" style="color: var(--muted); text-decoration: none;">Send Feedback</a></p>
     </div>
   </footer>
 
@@ -337,3 +337,4 @@
   </script>
 </body>
 </html>
+
