--- a/demo.html
+++ b/demo.html
@@ -241,7 +241,7 @@
         </div>
         <div class="footer-col">
           <h4>Resources</h4>
-          <a href="#">Documentation</a>
+          <a href="api.html">Documentation</a>
           <a href="#">Community</a>
           <a href="#">Status</a>
           <a href="#">Help Center</a>
@@ -262,13 +262,13 @@
           <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Abdullah-PyDev title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 Linguasign. All rights reserved. | <a href="feedback.html" style="color: var(--muted); text-decoration: none;">Send Feedback</a></p>
+      <p>&copy; 2025 Linguasign. All rights reserved. | <a href="feedback.html" style="color: var(--muted); text-decoration: none;">Send Feedback</a></p>
     </div>
   </footer>
 
@@ -393,3 +393,4 @@
   </script>
 </body>
 </html>
+
