--- a/features.html
+++ b/features.html
@@ -252,7 +252,7 @@
         </div>
         <div class="footer-col">
           <h4>Resources</h4>
-          <a href="#">Documentation</a>
+          <a href="api.html">Documentation</a>
           <a href="#">Community</a>
           <a href="#">Status</a>
           <a href="#">Help Center</a>
@@ -273,7 +273,7 @@
           <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Abdullah-PyDev title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
@@ -283,3 +283,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
