--- a/home.html
+++ b/home.html
@@ -201,7 +201,7 @@
             <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
@@ -211,4 +211,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
