--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lingua Sign - AI-Powered Sign Language Translation</title>
+  <title>Linguasign - AI-Powered Sign Language Translation</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="auth-check.js"></script>
@@ -213,4 +213,5 @@
 </body>
 
 </html>
+
 
