home page updated

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <div class="header-inner">
       <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
-        <span>LinguaSign</span>
+        <span>Linguasign</span>
       </a>
       <nav class="site-nav">
         <a href="home.html">Home</a>
@@ -213,5 +213,6 @@
 </body>
 
 </html>
+
 
 
