--- a/home.html
+++ b/home.html
@@ -196,14 +196,14 @@
       </div>
       <div class="footer-bottom">
         <div class="container" style="text-align: center;">
-          <p>&copy; 2025 LinguaSign. All rights reserved. Making communication accessible for everyone.</p>
-          <div class="footer-social" style="justify-content: center;">
-            <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
-          </div>
+        <p>&copy; 2025 Linguasign. All rights reserved.</p>
+        <div class="footer-social" style="justify-content: center;">
+          <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
         </div>
       </div>
     </div>
@@ -213,6 +213,7 @@
 </body>
 
 </html>
+
 
 
 
