Fixed home page

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
   <!-- Benefits Section -->
   <section class="benefits-section">
     <div class="container">
-      <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;">Why Choose LinguaSign?</h2>
+      <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;">Why Choose Linguasign?</h2>
       <p style="text-align: center; color: var(--muted); font-size: 1.1rem; margin-bottom: 3rem;">Empowering communication for everyone</p>
       
       <div class="benefits-grid">
@@ -213,6 +213,7 @@
 </body>
 
 </html>
+
 
 
 
