--- a/feedback.html
+++ b/feedback.html
@@ -49,38 +49,38 @@
       
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; margin-bottom: 3rem;">
         <button onclick="document.getElementById('feedback-type').value='bug-report'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">🐛</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">Bug Report</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-bug"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">Bug Report</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">Something not working?</p>
         </button>
 
         <button onclick="document.getElementById('feedback-type').value='feature-request'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">💡</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">Feature Request</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-lightbulb"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">Feature Request</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">New idea or improvement?</p>
         </button>
 
         <button onclick="document.getElementById('feedback-type').value='accessibility'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">♿</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">Accessibility</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-universal-access"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">Accessibility</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">Accessibility issue?</p>
         </button>
 
         <button onclick="document.getElementById('feedback-type').value='user-experience'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">🎨</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">User Experience</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-palette"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">User Experience</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">Design or UX feedback?</p>
         </button>
 
         <button onclick="document.getElementById('feedback-type').value='performance'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">⚡</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">Performance</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-bolt"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">Performance</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">Speed or reliability issue?</p>
         </button>
 
         <button onclick="document.getElementById('feedback-type').value='other'; this.parentElement.querySelectorAll('button').forEach(b => b.style.borderColor='var(--border)'); this.style.borderColor='var(--primary)'" style="border: 1.5px solid var(--border); padding: 2rem; border-radius: 14px; background: var(--card-bg); cursor: pointer; transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); transform: perspective(1000px) rotateX(0deg);" onmouseover="this.style.transform='translateY(-8px) perspective(1000px) rotateX(3deg)'; this.style.boxShadow='0 16px 40px rgba(0, 102, 255, 0.15)'" onmouseout="this.style.transform='perspective(1000px) rotateX(0deg)'; this.style.boxShadow='0 4px 20px rgba(0, 0, 0, 0.08)'">
-          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #000; font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);">💬</div>
-          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700;">Other</h3>
+          <div style="width: 80px; height: 80px; background: linear-gradient(135deg, rgba(0, 102, 255, 0.12), rgba(0, 212, 219, 0.12)); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: var(--text); font-size: 2.5rem; margin: 0 auto 0.75rem; border: 1.5px solid rgba(0, 102, 255, 0.2);"><i class="fas fa-comment"></i></div>
+          <h3 style="margin: 0; font-size: 1.1rem; font-weight: 700; color: var(--text);">Other</h3>
           <p style="color: var(--muted); font-size: 0.9rem; margin-top: 0.5rem;">General feedback?</p>
         </button>
       </div>
@@ -219,7 +219,7 @@
         </div>
         <div class="footer-col">
           <h4>Resources</h4>
-          <a href="api.html">Documentation</a>
+          <a href="#">Documentation</a>
           <a href="#">Community</a>
           <a href="#">Status</a>
           <a href="#">Help Center</a>
@@ -240,7 +240,7 @@
           <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
@@ -250,4 +250,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
