contact page updated

--- a/contact.html
+++ b/contact.html
@@ -281,7 +281,7 @@
       </div>
       <div class="footer-col">
         <h4>Resources</h4>
-        <a href="#">Documentation</a>
+        <a href="api.html">Documentation</a>
         <a href="#">Community</a>
         <a href="#">Status</a>
         <a href="#">Help Center</a>
@@ -295,7 +295,16 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 Linguasign. All rights reserved. | <a href="feedback.html" style="color: var(--muted); text-decoration: none;">Send Feedback</a></p>
+      <div class="container" style="text-align: center;">
+        <p>&copy; 2025 LinguaSign. All rights reserved.</p>
+        <div class="footer-social" style="justify-content: center;">
+          <a href="https://twitter.com" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://facebook.com" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://linkedin.com" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Abdullah-PyDev" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://youtube.com" title="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
     </div>
   </footer>
 
@@ -337,3 +346,4 @@
   </script>
 </body>
 </html>
+
