--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="brand">
+      <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
         <span>Linguasign</span>
       </a>
@@ -282,4 +282,5 @@
   <script src="auth.js"></script>
 </body>
 </html>
+
 
