--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="brand">
+      <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
         <span>Linguasign</span>
       </a>
@@ -393,4 +393,5 @@
   </script>
 </body>
 </html>
+
 
