--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="brand">
+      <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
         <span>Linguasign</span>
       </a>
@@ -346,4 +346,5 @@
   </script>
 </body>
 </html>
+
 
