--- a/careers.html
+++ b/careers.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="brand">
+      <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
         <span>Linguasign</span>
       </a>
@@ -302,5 +302,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
