--- a/api.html
+++ b/api.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="brand">
+      <a href="home.html" class="brand">
         <span class="brand-icon"><i class="fas fa-sign-language"></i></span>
         <span>Linguasign</span>
       </a>
@@ -291,3 +291,4 @@ fetch('https://api.linguasign.com/v1/text-to-sign', {
   <script src="script.js"></script>
 </body>
 </html>
+
